# wallet-app

./: .env  .eslintrc.js  .gitignore  README.md  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
components/common/AppIcon/: AppIcon.styles.ts  AppIcon.tsx
components/common/EtherCard/: EtherCard.styles.ts  EtherCard.tsx  index.ts
components/common/SecretPhraseModal/: SecretPhraseModal.tsx  index.ts
components/common/StepLine/: StepLine.styles.ts  StepLine.tsx  index.ts
components/common/UpdateBalance/: UpdateBalance.styles.ts  UpdateBalance.tsx  index.ts
components/common/utils/: Flex.styles.ts
components/pages/CreateWallet/: CreateWallet.constants.ts  CreateWallet.hooks.ts  CreateWallet.styles.ts  CreateWallet.tsx  CreateWallet.typings.ts
components/pages/Main/: Main.styles.ts  Main.tsx
components/pages/Wallet/: Wallet.styles.ts  Wallet.tsx
pages/: _app.tsx  _document.tsx  create-wallet.tsx  index.tsx  wallet.tsx
public/assets/: global.css  index.css
src/: Link.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/config/: localFonts.ts  theme.ts
src/functions/: ethers.ts  tauri.ts
src/hooks/: index.ts
src/hooks/uiHooks/: useDetectTheme.ts  useMedia.ts  useSwitchTheme.ts
src/hooks/utilHooks/: useCopyToClipboard.ts
src/hooks/w3hooks/: useGetWalletBalance.ts
src/providers/AppProvider/: AppProvider.tsx  AppProvider.typings.ts  index.ts
src/routing/: routing.ts
src/typings/: _appTypings.ts  common.ts  model.ts
src/utils/: browserUtils.ts
src/validators/: validators.ts
(+15 files in other folders)
