[package]
name = "app"
version = "1.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.3", features = ["shell-open"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ethereum-types = "0.12.0"
sha3 = "0.9.1"
tiny-bip39 = "1.0.0"
zeroize = "1.6.0"
secp256k1 = "0.27.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
